Fin du layout et des routages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,4 +3,4 @@
   C'est la page d'accuile pour l'application exemple du
   <a href="http://railstutorial.org/">Tutoriel Ruby on Rails</a>.
 </p>
- <%= link_to "S'inscrire!", '#', :class => "signup_button round" %>
+ <%= link_to "S'inscrire!", signup_path, :class => "signup_button round" %>
